# toml

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  lib.ring  main.ring  package.ring
.github/workflows/: alpine_build.yml  freebsd_build.yml  macos_build.yml  main.yml  testCI.yml  ubuntu_build.yml  windows_build.yml
examples/: example.toml  example1.ring  example2.ring  example3.ring  example4.ring
lib/macos/amd64/: libring_toml.dylib
lib/macos/arm64/: libring_toml.dylib
src/: ring_toml.c  ring_toml.rh  setup.ring  toml.ring  tomlc17.cf
src/utils/: color.ring  install.ring  uninstall.ring
tests/: TOML_test.ring  test.toml
